<?xml version="1.0"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
         xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">

    <modelVersion>4.0.0</modelVersion>

    <groupId>dev.knative.eventing</groupId>
    <artifactId>connectors</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>Knative Connectors</name>
    <packaging>pom</packaging>

    <properties>
        <compiler-plugin.version>3.14.0</compiler-plugin.version>
        <failsafe.useModulePath>false</failsafe.useModulePath>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <camel.version>4.12.0</camel.version>
        <camel.quarkus.platform.version>3.24.0</camel.quarkus.platform.version>
        <citrus.version>4.7.0</citrus.version>
        <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
        <quarkus.platform.version>3.24.2</quarkus.platform.version>
        <quarkus.kubernetes-client.generate-rbac>false</quarkus.kubernetes-client.generate-rbac>
        <quarkus.container-image.insecure>true</quarkus.container-image.insecure>
        <quarkus.container-image.registry>localhost:5001</quarkus.container-image.registry>
        <quarkus.container-image.group>openshift-knative</quarkus.container-image.group>

        <!-- needed from tooling/archetypes -->
        <maven-version>3.9.9</maven-version>
        <maven-archetype-plugin-version>3.4.0</maven-archetype-plugin-version>
        <maven-archetype-packaging-version>3.4.0</maven-archetype-packaging-version>

        <surefire-plugin.version>3.5.3</surefire-plugin.version>
        <skipITs>true</skipITs>
    </properties>

    <modules>
        <module>tools</module>
        <module>timer-source</module>
        <module>aws-s3-source</module>
        <module>aws-sqs-source</module>
        <module>aws-ddb-streams-source</module>
        <module>aws-s3-sink</module>
        <module>aws-sns-sink</module>
        <module>aws-sqs-sink</module>
        <module>aws-eventbridge-sink</module>
        <module>log-sink</module>
        <module>jsonata-transformer</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>${quarkus.platform.group-id}</groupId>
                <artifactId>quarkus-bom</artifactId>
                <version>${quarkus.platform.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.camel.quarkus</groupId>
                <artifactId>camel-quarkus-bom</artifactId>
                <version>${camel.quarkus.platform.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.apache.camel.kamelets</groupId>
                <artifactId>camel-kamelets</artifactId>
                <version>${camel.version}</version>
            </dependency>

            <!-- Citrus test framework -->
            <dependency>
                <groupId>org.citrusframework</groupId>
                <artifactId>citrus-quarkus</artifactId>
                <version>${citrus.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.citrusframework</groupId>
                <artifactId>citrus-http</artifactId>
                <version>${citrus.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.citrusframework</groupId>
                <artifactId>citrus-testcontainers</artifactId>
                <version>${citrus.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.citrusframework</groupId>
                <artifactId>citrus-validation-json</artifactId>
                <version>${citrus.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>${quarkus.platform.group-id}</groupId>
                    <artifactId>quarkus-maven-plugin</artifactId>
                    <version>${quarkus.platform.version}</version>
                    <extensions>true</extensions>
                    <executions>
                        <execution>
                            <goals>
                                <goal>build</goal>
                                <goal>generate-code</goal>
                                <goal>generate-code-tests</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${compiler-plugin.version}</version>
                    <configuration>
                        <compilerArgs>
                            <arg>-parameters</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${surefire-plugin.version}</version>
                    <configuration>
                        <systemPropertyVariables>
                            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                            <maven.home>${maven.home}</maven.home>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${surefire-plugin.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>integration-test</goal>
                                <goal>verify</goal>
                            </goals>
                            <configuration>
                                <systemPropertyVariables>
                                    <native.image.path>${project.build.directory}/${project.build.finalName}-runner</native.image.path>
                                    <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                                    <maven.home>${maven.home}</maven.home>
                                </systemPropertyVariables>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>knative</id>
            <activation>
                <property>
                    <name>knative</name>
                </property>
            </activation>
            <properties>
                <quarkus.container-image.image>${env.KO_DOCKER_REPO}/${project.artifactId}:${env.TAG}</quarkus.container-image.image>
                <quarkus.container-image.additional-tags>latest</quarkus.container-image.additional-tags>
                <quarkus.container-image.build>true</quarkus.container-image.build>
                <quarkus.container-image.push>true</quarkus.container-image.push>

                <!-- Unset to prevent default inheritance -->
                <quarkus.container-image.insecure>false</quarkus.container-image.insecure>
            </properties>
        </profile>
        <profile>
            <id>native</id>
            <activation>
                <property>
                    <name>native</name>
                </property>
            </activation>
            <properties>
                <skipITs>false</skipITs>
                <quarkus.package.type>native</quarkus.package.type>
            </properties>
        </profile>
    </profiles>

</project>
